# pybotx-smart-logger

./: LICENSE  README.md  pyproject.toml  setup.cfg
.github/workflows/: actions.yml  publish-pypi.yml
.snippets_setup/: logger_api_call.py  logger_check_role.py  logger_common_use.py  logger_debug_enable.py  logger_debug_enable_command.py  logger_fastapi_use.py  logger_init_bot.py  logger_init_middleware.py
pybotx_smart_logger/: __init__.py  contextmanager.py  contextvars.py  exception_handler.py  log_levels.py  logger.py  middlewares.py  output.py  schemas.py  task_decorator.py  undefined.py  wrapper.py
scripts/: format  lint
tests/: conftest.py  test_fastapi_logging.py  test_smart_logger.py  test_wrap_smart_logger.py
