[tool.poetry]
name = "pybotx-smart-logger"
version = "0.9.2"
description = "Shows logs when you need it"
authors = ["Alexander Samoylenko <alexandr.samojlenko@ccsteam.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.8, <3.11"

pybotx = "~0.46.0"

fastapi = ">=0.70.0,<0.75.0"


[tool.poetry.dev-dependencies]
add-trailing-comma = "2.2.3"
autoflake = "1.4.0"
black = "22.3.0"
isort = "5.10.1"
mypy = "0.910.0"
wemake-python-styleguide = "0.16.1"
bandit = "1.7.2"

pytest = "^7.0.1"
pytest-asyncio = "^0.18.1"
pytest-cov = "^3.0.0"
requests = "^2.27.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
