[tool.poetry]
name = "pybotx-smart-logger"
version = "0.11.1"
description = "Shows logs when you need it"
authors = ["Alexander Samoylenko <alexandr.samojlenko@ccsteam.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9, <3.14"

loguru = ">=0.6.0,<0.7.0"

[tool.poetry.dev-dependencies]
add-trailing-comma = "3.1.0"
autoflake = "2.3.1"
black = "25.1.0"
isort = "6.0.1"
mypy = "1.15.0"
wemake-python-styleguide = "0.19.2"
bandit = "1.8.3"

pytest = "^8.3.5"
pytest-asyncio = "^0.26.0"
pytest-cov = "^6.1.1"
requests = "^2.32.3"

fastapi = ">=0.70.0,<0.116.0"
pybotx = ">=0.75.0,<1.0.0"

[build-system]
requires = ["poetry>=1.2.0"]
build-backend = "poetry.masonry.api"
